[gd_scene load_steps=27 format=3 uid="uid://c1ovqmumbqjdm"]

[ext_resource type="Script" path="res://assets/scenes/quiz_session.gd" id="1_mn3kg"]
[ext_resource type="Texture2D" uid="uid://7rterpy3cejg" path="res://assets/uiux/session_themes/default/session_bg.tga" id="1_sfady"]
[ext_resource type="FontFile" uid="uid://bdi68tslsma5m" path="res://assets/uiux/session_themes/default/chalk.ttf" id="2_3q4bo"]
[ext_resource type="AudioStream" uid="uid://m7ekwmprjva7" path="res://assets/uiux/main_menu/bgm_quiz.mp3" id="2_5xm3w"]
[ext_resource type="Texture2D" uid="uid://df0lm8u8qyetk" path="res://assets/uiux/session_themes/default/timer.tga" id="2_6twy7"]
[ext_resource type="FontFile" uid="uid://ppcieu81eyur" path="res://assets/uiux/session_themes/default/TeachersStudent-Regular.ttf" id="5_4j7cf"]
[ext_resource type="Texture2D" uid="uid://cw2ifheyia7xq" path="res://assets/uiux/session_themes/default/kb1.tga" id="5_axfhu"]
[ext_resource type="Texture2D" uid="uid://dxk15c6q7pi14" path="res://assets/uiux/session_themes/default/kb2.tga" id="6_t6csj"]
[ext_resource type="Texture2D" uid="uid://r44nkuxl80ia" path="res://assets/uiux/session_themes/default/kb3.tga" id="7_0240t"]
[ext_resource type="Texture2D" uid="uid://dao52bedrv1we" path="res://assets/uiux/session_themes/default/kb4.tga" id="8_1xqpo"]
[ext_resource type="Texture2D" uid="uid://b30t6fkulee1m" path="res://assets/uiux/session_themes/default/separator_v.tga" id="10_l37jf"]
[ext_resource type="Texture2D" uid="uid://bkavjh7fqr2jg" path="res://assets/uiux/session_themes/default/status_skip_icon.tga" id="11_kn28g"]
[ext_resource type="Texture2D" uid="uid://lieock11ltvl" path="res://assets/uiux/session_themes/default/status_incorrect_icon.tga" id="12_ad8nh"]
[ext_resource type="Texture2D" uid="uid://bp12k6v5jugjd" path="res://assets/uiux/session_themes/default/status_correct_icon.tga" id="13_rsqes"]
[ext_resource type="Texture2D" uid="uid://sib7pjpdkuax" path="res://assets/uiux/session_themes/default/separator_h.tga" id="14_jng0i"]
[ext_resource type="FontFile" uid="uid://1uhji12ugu15" path="res://assets/uiux/session_themes/default/kiwischoolhandwritingwithguidesregular.ttf" id="16_gy4nf"]

[sub_resource type="LabelSettings" id="LabelSettings_35yei"]
font = ExtResource("2_3q4bo")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_2pk4f"]
font = ExtResource("5_4j7cf")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_m6a20"]
line_spacing = 0.0
font = ExtResource("5_4j7cf")
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_3cui3"]
font = ExtResource("5_4j7cf")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_7sn0p"]
font = ExtResource("5_4j7cf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_f1203"]
font = ExtResource("16_gy4nf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_5fu58"]
font = ExtResource("16_gy4nf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_f02j5"]
font = ExtResource("16_gy4nf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_btpdw"]
font = ExtResource("16_gy4nf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_d0wgl"]
font = ExtResource("5_4j7cf")
font_size = 24

[node name="quiz_session" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mn3kg")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.119
anchor_top = -0.194
anchor_right = 1.119
anchor_bottom = 1.194
offset_left = 0.320007
offset_top = -0.319992
offset_right = -0.320068
offset_bottom = 0.319946
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sfady")
stretch_mode = 1

[node name="Quiz_BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5xm3w")
autoplay = true
bus = &"Music"

[node name="quizBegin" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="quizInterface" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="session_organizer" type="VBoxContainer" parent="quizInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="question_header" type="HBoxContainer" parent="quizInterface/session_organizer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="clock" type="TextureRect" parent="quizInterface/session_organizer/question_header"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_6twy7")
expand_mode = 1

[node name="Countdown" type="Timer" parent="quizInterface/session_organizer/question_header"]
wait_time = 10.0
one_shot = true

[node name="question_index" type="Label" parent="quizInterface/session_organizer/question_header"]
layout_mode = 2
text = "#"
label_settings = SubResource("LabelSettings_35yei")

[node name="question_name" type="Label" parent="quizInterface/session_organizer/question_header"]
layout_mode = 2
text = "Question_Name"
label_settings = SubResource("LabelSettings_2pk4f")

[node name="CountdownLabel" type="Label" parent="quizInterface/session_organizer"]
layout_mode = 2
text = "00:30"
label_settings = SubResource("LabelSettings_m6a20")

[node name="question_body" type="Label" parent="quizInterface/session_organizer"]
custom_minimum_size = Vector2(1792, 192)
layout_mode = 2
text = "Question_Body"
label_settings = SubResource("LabelSettings_3cui3")
autowrap_mode = 2

[node name="spacer - leave blank" type="Label" parent="quizInterface/session_organizer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="quizInterface/session_organizer"]
layout_mode = 2
theme_override_constants/separation = 420

[node name="answer_organizer" type="VBoxContainer" parent="quizInterface/session_organizer/HBoxContainer"]
layout_mode = 2

[node name="answer_pair1" type="HBoxContainer" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer"]
layout_mode = 2

[node name="a1_icon" type="TextureRect" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_axfhu")
expand_mode = 1

[node name="a1" type="Label" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair1"]
layout_mode = 2
text = "answer_one"
label_settings = SubResource("LabelSettings_7sn0p")

[node name="answer_pair2" type="HBoxContainer" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer"]
layout_mode = 2

[node name="a2_icon" type="TextureRect" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("6_t6csj")
expand_mode = 1

[node name="a2" type="Label" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair2"]
layout_mode = 2
text = "answer_one"
label_settings = SubResource("LabelSettings_7sn0p")

[node name="answer_pair3" type="HBoxContainer" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer"]
layout_mode = 2

[node name="a3_icon" type="TextureRect" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("7_0240t")
expand_mode = 1

[node name="a3" type="Label" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair3"]
layout_mode = 2
text = "answer_one"
label_settings = SubResource("LabelSettings_7sn0p")

[node name="answer_pair4" type="HBoxContainer" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer"]
layout_mode = 2

[node name="a4_icon" type="TextureRect" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("8_1xqpo")
expand_mode = 1

[node name="a4" type="Label" parent="quizInterface/session_organizer/HBoxContainer/answer_organizer/answer_pair4"]
layout_mode = 2
text = "answer_one"
label_settings = SubResource("LabelSettings_7sn0p")

[node name="players_region" type="HBoxContainer" parent="quizInterface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -671.0
offset_top = -137.0
offset_right = 671.0
grow_horizontal = 2
grow_vertical = 0

[node name="activePlayer1" type="HBoxContainer" parent="quizInterface/players_region"]
layout_mode = 2

[node name="spacer_v2" type="TextureRect" parent="quizInterface/players_region/activePlayer1"]
layout_mode = 2
texture = ExtResource("10_l37jf")

[node name="player_case" type="VBoxContainer" parent="quizInterface/players_region/activePlayer1"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="status_row" type="HBoxContainer" parent="quizInterface/players_region/activePlayer1/player_case"]
layout_mode = 2

[node name="status_a" type="TextureRect" parent="quizInterface/players_region/activePlayer1/player_case/status_row"]
layout_mode = 2
texture = ExtResource("11_kn28g")

[node name="status_b" type="TextureRect" parent="quizInterface/players_region/activePlayer1/player_case/status_row"]
layout_mode = 2
texture = ExtResource("12_ad8nh")

[node name="status_c" type="TextureRect" parent="quizInterface/players_region/activePlayer1/player_case/status_row"]
layout_mode = 2
texture = ExtResource("13_rsqes")

[node name="score" type="Label" parent="quizInterface/players_region/activePlayer1/player_case/status_row"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"

[node name="spacer_h" type="TextureRect" parent="quizInterface/players_region/activePlayer1/player_case"]
layout_mode = 2
texture = ExtResource("14_jng0i")

[node name="player1_name" type="Label" parent="quizInterface/players_region/activePlayer1/player_case"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3q4bo")
theme_override_font_sizes/font_size = 48
text = "p1Name
"
label_settings = SubResource("LabelSettings_f1203")

[node name="spacer_v" type="TextureRect" parent="quizInterface/players_region/activePlayer1"]
layout_mode = 2
texture = ExtResource("10_l37jf")

[node name="activePlayer2" type="HBoxContainer" parent="quizInterface/players_region"]
visible = false
layout_mode = 2

[node name="player_case2" type="VBoxContainer" parent="quizInterface/players_region/activePlayer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="status_row" type="HBoxContainer" parent="quizInterface/players_region/activePlayer2/player_case2"]
layout_mode = 2

[node name="status_a" type="TextureRect" parent="quizInterface/players_region/activePlayer2/player_case2/status_row"]
layout_mode = 2
texture = ExtResource("11_kn28g")

[node name="status_b" type="TextureRect" parent="quizInterface/players_region/activePlayer2/player_case2/status_row"]
layout_mode = 2
texture = ExtResource("12_ad8nh")

[node name="status_c" type="TextureRect" parent="quizInterface/players_region/activePlayer2/player_case2/status_row"]
layout_mode = 2
texture = ExtResource("13_rsqes")

[node name="score" type="Label" parent="quizInterface/players_region/activePlayer2/player_case2/status_row"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"

[node name="spacer_h" type="TextureRect" parent="quizInterface/players_region/activePlayer2/player_case2"]
layout_mode = 2
texture = ExtResource("14_jng0i")

[node name="player2_name" type="Label" parent="quizInterface/players_region/activePlayer2/player_case2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3q4bo")
theme_override_font_sizes/font_size = 48
text = "p2Name"
label_settings = SubResource("LabelSettings_5fu58")

[node name="spacer_v3" type="TextureRect" parent="quizInterface/players_region/activePlayer2"]
layout_mode = 2
texture = ExtResource("10_l37jf")

[node name="activePlayer3" type="HBoxContainer" parent="quizInterface/players_region"]
visible = false
layout_mode = 2

[node name="player_case3" type="VBoxContainer" parent="quizInterface/players_region/activePlayer3"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="status_row" type="HBoxContainer" parent="quizInterface/players_region/activePlayer3/player_case3"]
layout_mode = 2

[node name="status_a" type="TextureRect" parent="quizInterface/players_region/activePlayer3/player_case3/status_row"]
layout_mode = 2
texture = ExtResource("11_kn28g")

[node name="status_b" type="TextureRect" parent="quizInterface/players_region/activePlayer3/player_case3/status_row"]
layout_mode = 2
texture = ExtResource("12_ad8nh")

[node name="status_c" type="TextureRect" parent="quizInterface/players_region/activePlayer3/player_case3/status_row"]
layout_mode = 2
texture = ExtResource("13_rsqes")

[node name="score" type="Label" parent="quizInterface/players_region/activePlayer3/player_case3/status_row"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"

[node name="spacer_h" type="TextureRect" parent="quizInterface/players_region/activePlayer3/player_case3"]
layout_mode = 2
texture = ExtResource("14_jng0i")

[node name="player3_name" type="Label" parent="quizInterface/players_region/activePlayer3/player_case3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3q4bo")
theme_override_font_sizes/font_size = 48
text = "p3Name"
label_settings = SubResource("LabelSettings_f02j5")

[node name="spacer_v4" type="TextureRect" parent="quizInterface/players_region/activePlayer3"]
layout_mode = 2
texture = ExtResource("10_l37jf")

[node name="activePlayer4" type="HBoxContainer" parent="quizInterface/players_region"]
visible = false
layout_mode = 2

[node name="player_case4" type="VBoxContainer" parent="quizInterface/players_region/activePlayer4"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="status_row" type="HBoxContainer" parent="quizInterface/players_region/activePlayer4/player_case4"]
layout_mode = 2

[node name="status_a" type="TextureRect" parent="quizInterface/players_region/activePlayer4/player_case4/status_row"]
layout_mode = 2
texture = ExtResource("11_kn28g")

[node name="status_b" type="TextureRect" parent="quizInterface/players_region/activePlayer4/player_case4/status_row"]
layout_mode = 2
texture = ExtResource("12_ad8nh")

[node name="status_c" type="TextureRect" parent="quizInterface/players_region/activePlayer4/player_case4/status_row"]
layout_mode = 2
texture = ExtResource("13_rsqes")

[node name="score" type="Label" parent="quizInterface/players_region/activePlayer4/player_case4/status_row"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"

[node name="spacer_h" type="TextureRect" parent="quizInterface/players_region/activePlayer4/player_case4"]
layout_mode = 2
texture = ExtResource("14_jng0i")

[node name="player4_name" type="Label" parent="quizInterface/players_region/activePlayer4/player_case4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3q4bo")
theme_override_font_sizes/font_size = 48
text = "p4Name"
label_settings = SubResource("LabelSettings_btpdw")

[node name="spacer_v5" type="TextureRect" parent="quizInterface/players_region/activePlayer4"]
layout_mode = 2
texture = ExtResource("10_l37jf")

[node name="post_question" type="Label" parent="quizInterface"]
visible = false
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 672.0
offset_top = 408.0
offset_right = -24.0
offset_bottom = -208.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
text = "Question_Description"
label_settings = SubResource("LabelSettings_d0wgl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="quizEnd" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
